[gd_scene format=4 uid="uid://bwc8mi564105v"]

[ext_resource type="TileSet" uid="uid://s1jae7bp41go" path="res://world/tileset/blocos_padroes.tres" id="1_o4s0k"]
[ext_resource type="Shader" uid="uid://ce3gnls5wfkdi" path="res://assets/shaders/abigobado.gdshader" id="2_p57lk"]
[ext_resource type="Script" uid="uid://dq2q6ymx5avyj" path="res://components/comportamentos/vai_e_volta.gd" id="3_f5b46"]
[ext_resource type="Script" uid="uid://4dgxmyd2pfdu" path="res://components/vida/comp_vida.gd" id="5_f5b46"]
[ext_resource type="PackedScene" uid="uid://du27fc4g0oifh" path="res://entities/player/Player.tscn" id="5_jiql5"]
[ext_resource type="PackedScene" uid="uid://ctr3pc6k5ig3o" path="res://components/ui/ui_vida_simples.tscn" id="5_o4s0k"]
[ext_resource type="Script" uid="uid://d1xaxosi0e3l3" path="res://components/comp_hurtbox.gd" id="6_53h5a"]
[ext_resource type="Script" uid="uid://bxg0dc50gamxy" path="res://components/morte/morte_subcomp.gd" id="6_o4s0k"]
[ext_resource type="Texture2D" uid="uid://dsi3i0285lt4l" path="res://assets/sprites/icon.svg" id="27_0s4bq"]
[ext_resource type="PackedScene" uid="uid://dkl5kqkk0aacp" path="res://components/camera/camera_simples.tscn" id="28_p57lk"]
[ext_resource type="Script" uid="uid://dx1tw4mmnv15a" path="res://components/comp_hitbox.gd" id="28_rblxm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f5b46"]
shader = ExtResource("2_p57lk")
shader_parameter/pode = false
shader_parameter/velocidade = 0.0

[node name="TestandoComponetes" type="Node2D" unique_id=1627596337]

[node name="respaw" type="Node2D" parent="." unique_id=436312033]
position = Vector2(-191, -5)

[node name="terreno" type="TileMapLayer" parent="." unique_id=1593613103]
position = Vector2(20.845, -52.545)
tile_map_data = PackedByteArray("AAD//wIAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAIAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAAFAAIAAAAAAAAAAAAGAAIAAAAAAAAAAAD+/wIAAAAAAAAAAAD9/wIAAAAAAAAAAAD8/wIAAAAAAAAAAAACAP//AAAAAAAAAAADAP//AAAAAAAAAAAEAP//AAAAAAAAAAD///7/AAAAAAAAAAD+//7/AAAAAAAAAAD9//7/AAAAAAAAAAACAPv/AAAAAAAAAAADAPv/AAAAAAAAAAAEAPv/AAAAAAAAAAAHAAIAAAAAAAAAAAAIAAIAAAAAAAAAAAAJAAIAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAAAAAAAAAAAAAAKAP//AAAAAAAAAAAKAP7/AAAAAAAAAAAKAP3/AAAAAAAAAAAKAPz/AAAAAAAAAAAKAPv/AAAAAAAAAAAJAP//AAAAAAAAAAAIAP//AAAAAAAAAAAKAPr/AAAAAAAAAAALAPr/AAAAAAAAAAALAPv/AAAAAAAAAAALAPz/AAAAAAAAAAALAP3/AAAAAAAAAAALAP7/AAAAAAAAAAALAP//AAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAAKAAMAAAAAAAAAAAAJAAMAAAAAAAAAAAAIAAMAAAAAAAAAAAAHAAMAAAAAAAAAAAAGAAMAAAAAAAAAAAAFAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAADAAMAAAAAAAAAAAACAAMAAAAAAAAAAAABAAMAAAAAAAAAAAAAAAMAAAAAAAAAAAD//wMAAAAAAAAAAAD+/wMAAAAAAAAAAAD9/wMAAAAAAAAAAAD8/wMAAAAAAAAAAAD7/wMAAAAAAAAAAAD6/wMAAAAAAAAAAAD5/wMAAAAAAAAAAAD4/wMAAAAAAAAAAAD3/wMAAAAAAAAAAAD2/wMAAAAAAAAAAAD1/wMAAAAAAAAAAADz/wIAAAAAAAAAAADz/wEAAAAAAAAAAADz/wAAAAAAAAAAAADz////AAAAAAAAAADz/wMAAAAAAAAAAAD0/wMAAAAAAAAAAADz//7/AAAAAAAAAADz//3/AAAAAAAAAADz//z/AAAAAAAAAADz//v/AAAAAAAAAADz//r/AAAAAAAAAADz//n/AAAAAAAAAADz//j/AAAAAAAAAADz//f/AAAAAAAAAADz//b/AAAAAAAAAADz//X/AAAAAAAAAAAKAPn/AAAAAAAAAAAKAPj/AAAAAAAAAAAKAPf/AAAAAAAAAAALAPj/AAAAAAAAAAALAPn/AAAAAAAAAAALAPf/AAAAAAAAAAD7/wQAAAAAAAAAAAD6/wQAAAAAAAAAAAD5/wQAAAAAAAAAAAD4/wQAAAAAAAAAAAD3/wQAAAAAAAAAAAD2/wQAAAAAAAAAAAD1/wQAAAAAAAAAAAD0/wQAAAAAAAAAAADz/wQAAAAAAAAAAADy/wMAAAAAAAAAAADy/wIAAAAAAAAAAADy/wEAAAAAAAAAAADy/wAAAAAAAAAAAADy////AAAAAAAAAADy//7/AAAAAAAAAADy//3/AAAAAAAAAADy//z/AAAAAAAAAADy//v/AAAAAAAAAADy//r/AAAAAAAAAADy//n/AAAAAAAAAADy//j/AAAAAAAAAADy//f/AAAAAAAAAADy//b/AAAAAAAAAADy//X/AAAAAAAAAAD2/wAAAAAAAAAAAAD3/wAAAAAAAAAAAAD4/wAAAAAAAAAAAAD5/wAAAAAAAAAAAAD6/wAAAAAAAAAAAAD0//7/AAAAAAAAAAD1//7/AAAAAAAAAAD2//z/AAAAAAAAAAD3//z/AAAAAAAAAAD4//z/AAAAAAAAAAD5//z/AAAAAAAAAAD6//z/AAAAAAAAAAD7//z/AAAAAAAAAAD3//v/AAAAAAAAAAD3//r/AAAAAAAAAAD3//n/AAAAAAAAAAD0//f/AAAAAAAAAAD1//f/AAAAAAAAAADy//T/AAAAAAAAAADy//P/AAAAAAAAAADy//L/AAAAAAAAAADz//L/AAAAAAAAAADz//P/AAAAAAAAAADz//T/AAAAAAAAAAD5//b/AAAAAAAAAAD6//b/AAAAAAAAAAD7//b/AAAAAAAAAAD8//b/AAAAAAAAAAD9//b/AAAAAAAAAAD+//b/AAAAAAAAAAD///b/AAAAAAAAAAAAAPb/AAAAAAAAAAABAPb/AAAAAAAAAAACAPb/AAAAAAAAAAADAPb/AAAAAAAAAAAEAPb/AAAAAAAAAAAFAPb/AAAAAAAAAAAGAPb/AAAAAAAAAAAHAPb/AAAAAAAAAAAKAPb/AAAAAAAAAAAKAPX/AAAAAAAAAAAKAPT/AAAAAAAAAAAKAPP/AAAAAAAAAAAKAPL/AAAAAAAAAAALAPL/AAAAAAAAAAALAPP/AAAAAAAAAAALAPT/AAAAAAAAAAALAPX/AAAAAAAAAAALAPb/AAAAAAAAAAABAAEAAAABAAAAAAD+//3/AAABAAAAAAD///3/AAABAAAAAAD5//v/AAABAAAAAAD6//v/AAABAAAAAAD4////AAABAAAAAAAEAP7/AAABAAAAAAA=")
tile_set = ExtResource("1_o4s0k")

[node name="background" type="TileMapLayer" parent="terreno" unique_id=739173472]
z_index = -1
tile_map_data = PackedByteArray("AAD0////AAAAAAEAAAD0/wAAAAAAAAEAAAD0/wEAAAAAAAEAAAD0/wIAAAAAAAEAAAD1/wEAAAAAAAEAAAD1/wAAAAAAAAEAAAD1////AAAAAAEAAAD1/wIAAAAAAAEAAAD2/wIAAAAAAAEAAAD2/wEAAAAAAAEAAAD2/wAAAAAAAAEAAAD2////AAAAAAEAAAD3/wEAAAAAAAEAAAD3/wAAAAAAAAEAAAD3////AAAAAAEAAAD4/wEAAAAAAAEAAAD5/wEAAAAAAAEAAAD5/wAAAAAAAAEAAAD5////AAAAAAEAAAD4////AAAAAAEAAAD5/wIAAAAAAAEAAAD6/wEAAAAAAAEAAAD6/wAAAAAAAAEAAAD4/wAAAAAAAAEAAAD4/wIAAAAAAAEAAAD6/wIAAAAAAAEAAAD3/wIAAAAAAAEAAAD7/wIAAAAAAAEAAAD7/wEAAAAAAAEAAAD7/wAAAAAAAAEAAAD6////AAAAAAEAAAD6//7/AAAAAAEAAAD7//7/AAAAAAEAAAD7//3/AAAAAAEAAAD6//3/AAAAAAEAAAD5//3/AAAAAAEAAAD4//3/AAAAAAEAAAD3//3/AAAAAAEAAAD2//3/AAAAAAEAAAD3//7/AAAAAAEAAAD4//7/AAAAAAEAAAD5//7/AAAAAAEAAAD7////AAAAAAEAAAD2//7/AAAAAAEAAAD1//3/AAAAAAEAAAD0//3/AAAAAAEAAAD0//z/AAAAAAEAAAD0//v/AAAAAAEAAAD0//r/AAAAAAEAAAD0//n/AAAAAAEAAAD0//j/AAAAAAEAAAD1//r/AAAAAAEAAAD1//v/AAAAAAEAAAD1//n/AAAAAAEAAAD2//n/AAAAAAEAAAD2//j/AAAAAAEAAAD1//j/AAAAAAEAAAD2//v/AAAAAAEAAAD1//z/AAAAAAEAAAD2//r/AAAAAAEAAAD2//f/AAAAAAEAAAD3//f/AAAAAAEAAAD3//j/AAAAAAEAAAD3//n/AAAAAAEAAAD3//r/AAAAAAEAAAD4//r/AAAAAAEAAAD4//v/AAAAAAEAAAD4//n/AAAAAAEAAAD4//j/AAAAAAEAAAD4//f/AAAAAAEAAAD5//r/AAAAAAEAAAD5//n/AAAAAAEAAAD6//n/AAAAAAEAAAD6//j/AAAAAAEAAAD6//f/AAAAAAEAAAD5//f/AAAAAAEAAAD5//j/AAAAAAEAAAD6//r/AAAAAAEAAAD6//v/AAAAAAEAAAD5//v/AAAAAAEAAAD7//v/AAAAAAEAAAD7//r/AAAAAAEAAAD7//n/AAAAAAEAAAD7//j/AAAAAAEAAAD7//f/AAAAAAEAAAD5//b/AAAAAAEAAAD4//b/AAAAAAEAAAD3//b/AAAAAAEAAAD2//b/AAAAAAEAAAD1//b/AAAAAAEAAAD0//b/AAAAAAEAAAADAPr/AAAAAAEAAAADAPn/AAAAAAEAAAADAPj/AAAAAAEAAAADAPf/AAAAAAEAAAADAPv/AAAAAAEAAAADAPz/AAAAAAEAAAADAP3/AAAAAAEAAAADAP7/AAAAAAEAAAADAP//AAAAAAEAAAADAAAAAAAAAAEAAAADAAEAAAAAAAEAAAD8//7/AAAAAAEAAAD9//7/AAAAAAEAAAD+//7/AAAAAAEAAAD///7/AAAAAAEAAAD+////AAAAAAEAAAD+/wAAAAAAAAEAAAD+/wEAAAAAAAEAAAA=")
tile_set = ExtResource("1_o4s0k")
collision_enabled = false

[node name="inimigu" type="Sprite2D" parent="." unique_id=1889792221]
position = Vector2(170, -15)
scale = Vector2(0.19, 0.19)
texture = ExtResource("27_0s4bq")
script = ExtResource("3_f5b46")
velocidade = 5.0
quanto = 20.0

[node name="comp_hitbox" type="Area2D" parent="inimigu" unique_id=1883546936]
script = ExtResource("28_rblxm")
dano = 3.0
metadata/_custom_type_script = "uid://dx1tw4mmnv15a"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="inimigu/comp_hitbox" unique_id=1796840484]
polygon = PackedVector2Array(-52, -61, -61, -52, -61, 54, -53, 62, 51, 62, 61, 53, 61, -52, 51, -62)

[node name="inimigu2" type="Sprite2D" parent="." unique_id=334847788]
position = Vector2(127, -14.999999)
scale = Vector2(0.19, 0.19)
texture = ExtResource("27_0s4bq")

[node name="comp_hitbox" type="Area2D" parent="inimigu2" unique_id=1106196829]
script = ExtResource("28_rblxm")
metadata/_custom_type_script = "uid://dx1tw4mmnv15a"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="inimigu2/comp_hitbox" unique_id=325907188]
polygon = PackedVector2Array(-52, -61, -61, -52, -61, 54, -53, 62, 51, 62, 61, 53, 61, -52, 51, -62)

[node name="CharacterBody2D" type="CharacterBody2D" parent="." unique_id=859370932]
position = Vector2(13, 1)

[node name="inimigu3" type="Sprite2D" parent="CharacterBody2D" unique_id=674934197]
position = Vector2(96, -91)
scale = Vector2(0.19, 0.19)
texture = ExtResource("27_0s4bq")

[node name="PanelContainer2" parent="CharacterBody2D/inimigu3" unique_id=1355360307 node_paths=PackedStringArray("comp_vida") instance=ExtResource("5_o4s0k")]
offset_left = -52.631577
offset_top = -115.78947
offset_right = 139.6761
offset_bottom = -55.060707
comp_vida = NodePath("../comp_Vida")

[node name="comp_Vida" type="Node" parent="CharacterBody2D/inimigu3" unique_id=252079177 node_paths=PackedStringArray("dono")]
script = ExtResource("5_f5b46")
dono = NodePath("../..")
vida = 5.0
vida_Maxima = 5.0
metadata/_custom_type_script = "uid://4dgxmyd2pfdu"

[node name="morteSimples_SubComp" type="Node" parent="CharacterBody2D/inimigu3/comp_Vida" unique_id=1819057840 node_paths=PackedStringArray("vida_comp")]
script = ExtResource("6_o4s0k")
vida_comp = NodePath("..")
metadata/_custom_type_script = "uid://bxg0dc50gamxy"

[node name="comp_hurtbox" type="Area2D" parent="CharacterBody2D/inimigu3" unique_id=439241869 node_paths=PackedStringArray("vida")]
script = ExtResource("6_53h5a")
vida = NodePath("../comp_Vida")
metadata/_custom_type_script = "uid://d1xaxosi0e3l3"

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="CharacterBody2D/inimigu3/comp_hurtbox" unique_id=24908366]
polygon = PackedVector2Array(-52, -61, -61, -52, -61, 54, -53, 62, 51, 62, 61, 53, 61, -52, 51, -62)

[node name="CameraNormal" parent="." unique_id=1787818286 node_paths=PackedStringArray("alvo") instance=ExtResource("28_p57lk")]
alvo = NodePath("../Player")
offset = Vector2(0, -25.945)
zoom_da_camera = Vector2(2, 2)
scroll = 0.15000000000000568

[node name="Player" parent="." unique_id=1949273261 instance=ExtResource("5_jiql5")]
material = SubResource("ShaderMaterial_f5b46")
position = Vector2(-13, -17)

[node name="morteRespawn_SubComp" parent="Player/vida_Comp" parent_id_path=PackedInt32Array(1949273261, 1755289048) index="1" unique_id=725625582 node_paths=PackedStringArray("local_respawn")]
local_respawn = NodePath("../../../respaw")

[editable path="Player"]
